--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -7,7 +7,10 @@
   --foreground: #171717;
 }
 
-
+.cashbox{
+  backdrop-filter: blur(50.89714431762695px);
+  background: rgba(255, 255, 255, 0.2);
+}
 
 .placeholder-light::placeholder {
   color: #d3d3d3; 
