--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -1,7 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+html,body{
+  height: 100%;
+  width: 100%;
+}
 :root {
   /* All Background-Color Here */
   --bg1:#001E2B;
@@ -27,6 +30,10 @@
   --bg15:#00ed64;
   --bg16:#6cc04a;
   --bg17:#b8c4c2;
+
+  --bg18:#a6ffec;
+  --bg19:#002a4a;
+  --bg20:#ffffff;
 
   /* All Highlight-Color Here */
   --high:#00ED64;
