--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -34,9 +34,10 @@ html,body{
   --bg18:#a6ffec;
   --bg19:#002a4a;
   --bg20:#ffffff;
+  --bg21:#061621;
 
   /* All Highlight-Color Here */
-  --high:#00ED64;
+  --high1:#00ED64;
   /* All Text-Color Here */
   --text1:#ffffff;
   --text2:#b8c4c2;
